--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 <div class="project-item">
                   <h4>Website Portofolio</h4>
                   <p>Website pribadi dengan fitur dark/light mode.</p>
-                  <a href="#"> <i class="fas fa-link"></i> Lihat </a>
+                  <a href="https://uts-web-liard.vercel.app/" target="_blank"> <i class="fas fa-link"></i> Lihat </a>
                 </div>
                 <div class="project-item">
                   <h4>Sistem CRUD Drakor</h4>
