--- a/index.html
+++ b/index.html
@@ -281,10 +281,10 @@
       <div class="footer-marquee">
         <div class="marquee-content">
           <span><i class="fas fa-rocket"></i> Terus Belajar & Berkembang</span>
-          <span><i class="fas fa-code"></i> Passionate in Web Development</span>
-          <span><i class="fas fa-paint-brush"></i> Love UI/UX Design</span>
-          <span><i class="fas fa-star"></i> Always Give The Best</span>
-          <span><i class="fas fa-fire"></i> Ready for New Challenges</span>
+          <span><i class="fas fa-code"></i> Bersemangat di Bidang Web Development</span>
+          <span><i class="fas fa-paint-brush"></i> Menyukai Desain UI/UX</span>
+          <span><i class="fas fa-star"></i> Selalu Memberikan yang Terbaik</span>
+          <span><i class="fas fa-fire"></i> Siap untuk Tantangan Baru</span>
         </div>
       </div>
       <div class="footer-bottom">
