--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portofolio-Nabilah Alfa Rahmah</title>
+    <title>Profil-Nabilah Alfa Rahmah</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -43,7 +43,7 @@
               <a class="nav-link" href="#about">Tentang</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#work">Pengalaman & Projek</a>
+              <a class="nav-link" href="#work">Portofolio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#education">Pendidikan</a>
@@ -118,7 +118,7 @@
         </svg>
       </section>
 
-      <!-- Pengalaman & Projek -->
+      <!-- Portofolio -->
       <section id="work" class="work-section">
         <div class="container">
           <h2>Pengalaman & Projek</h2>
