--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       <!-- Portofolio -->
       <section id="work" class="work-section">
         <div class="container">
-          <h2>Pengalaman & Projek</h2>
+          <h2>Portofolio</h2>
 
           <div class="work-grid">
             <!-- Pengalaman (Timeline) -->
